Add foundations' projects

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <p>This is a collection of all the projects I've done following <a href="">The Odin Project</a>'s curriculum.</p>
     <h2>The Foundations</h2>
     <ul>
-        <li><a href="">Recipes</a></li>
-        <li><a href="">Landing page</a></li>
-        <li><a href="">Rock paper scissors</a></li>
-        <li><a href="">Etch a sketch</a></li>
-        <li><a href="">Calculator</a></li>
+        <li><a href="foundations/recipes/index.html">Recipes</a></li>
+        <li><a href="foundations/landing-page/index.html">Landing page</a></li>
+        <li><a href="foundations/rock-paper-scissors/index.html">Rock paper scissors</a></li>
+        <li><a href="foundations/etch-a-sketch/index.html">Etch a sketch</a></li>
+        <li><a href="foundations/calculator/index.html">Calculator</a></li>
     </ul>
     <h2>Full Stack Javascript path</h2>
 </body>
