Add details to form

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sign-up form</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <main>
-      <div class="illustration">
-        <img src="./Saly-12.svg" alt="Sign up illustration" />
+    <link rel="stylesheet" href="./style.css"/>
+</head>
+<body>
+<main>
+    <div class="illustration">
+        <h1>Sign-up now !</h1>
+        <img src="./Saly-12.svg" alt="Sign up illustration"/>
         <p>
-          Illustration by
-          <a href="instagram.com/alzearafat/">Alzea Arafat</a> on
-          <a href="https://www.figma.com/community/file/890095002328610853">Figma</a>
+            Illustration by
+            <a href="instagram.com/alzearafat/">Alzea Arafat</a> on
+            <a href="https://www.figma.com/community/file/890095002328610853">Figma</a>
         </p>
-      </div>
-      <div class="form">
-        <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.</p>
+    </div>
+    <div class="form">
+        <p>This is not a real online service! You know you need something like this in your life to help you realize
+            your deepest dreams.</p>
+        <h2>Let's do this!</h2>
         <form action="">
             <fieldset>
                 <div class="inputField">
@@ -42,18 +45,18 @@
             </fieldset>
             <fieldset>
                 <div class="inputField">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <div class="inputField">
-                <label for="password-c">Password confirmation</label>
-                <input type="password" name="password-c" id="password-c">
-            </div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                </div>
+                <div class="inputField">
+                    <label for="password-c">Password confirmation</label>
+                    <input type="password" name="password-c" id="password-c">
+                </div>
             </fieldset>
             <button type="submit">Create account</button>
         </form>
         <p>Already have an account? <a href="">Log in</a></p>
-      </div>
-    </main>
-  </body>
+    </div>
+</main>
+</body>
 </html>
