Style mobile version

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -10,7 +10,7 @@
 <body>
 <main>
     <div class="illustration">
-        <h1>Sign-up now !</h1>
+        <h1>Let's do this!</h1>
         <img src="./Saly-12.svg" alt="Sign up illustration"/>
         <p>
             Illustration by
@@ -19,38 +19,38 @@
         </p>
     </div>
     <div class="form">
+        <h2>Sign-up</h2>
         <p>This is not a real online service! You know you need something like this in your life to help you realize
             your deepest dreams.</p>
-        <h2>Let's do this!</h2>
         <form action="">
             <fieldset>
                 <div class="inputField">
                     <label for="first-name">First name</label>
-                    <input type="text" name="first-name" id="first-name">
+                    <input type="text" name="first-name" id="first-name" placeholder="Enter your first name">
                 </div>
                 <div class="inputField">
                     <label for="last-name">Last name</label>
-                    <input type="text" name="last-name" id="last-name">
+                    <input type="text" name="last-name" id="last-name" placeholder="Enter your name">
                 </div>
             </fieldset>
             <fieldset>
                 <div class="inputField">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder="Enter your email">
                 </div>
                 <div class="inputField">
                     <label for="phone">Phone number</label>
-                    <input type="tel" name="phone" id="phone">
+                    <input type="tel" name="phone" id="phone" placeholder="999-999-9999">
                 </div>
             </fieldset>
             <fieldset>
                 <div class="inputField">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" placeholder="••••••••">
                 </div>
                 <div class="inputField">
                     <label for="password-c">Password confirmation</label>
-                    <input type="password" name="password-c" id="password-c">
+                    <input type="password" name="password-c" id="password-c" placeholder="••••••••">
                 </div>
             </fieldset>
             <button type="submit">Create account</button>
