Sign-up form : Add required validation

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -26,31 +26,31 @@
             <fieldset>
                 <div class="inputField">
                     <label for="first-name">First name</label>
-                    <input type="text" name="first-name" id="first-name" placeholder="Enter your first name">
+                    <input type="text" name="first-name" id="first-name" placeholder="Enter your first name" required>
                 </div>
                 <div class="inputField">
                     <label for="last-name">Last name</label>
-                    <input type="text" name="last-name" id="last-name" placeholder="Enter your name">
+                    <input type="text" name="last-name" id="last-name" placeholder="Enter your name" required>
                 </div>
             </fieldset>
             <fieldset>
                 <div class="inputField">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email" placeholder="Enter your email">
+                    <input type="email" name="email" id="email" placeholder="Enter your email" required>
                 </div>
                 <div class="inputField">
                     <label for="phone">Phone number</label>
-                    <input type="tel" name="phone" id="phone" placeholder="999-999-9999">
+                    <input type="tel" name="phone" id="phone" placeholder="999-999-9999" required>
                 </div>
             </fieldset>
             <fieldset>
                 <div class="inputField">
                     <label for="password">Password</label>
-                    <input type="password" name="password" id="password" placeholder="••••••••">
+                    <input type="password" name="password" id="password" placeholder="••••••••" required>
                 </div>
                 <div class="inputField">
                     <label for="password-c">Password confirmation</label>
-                    <input type="password" name="password-c" id="password-c" placeholder="••••••••">
+                    <input type="password" name="password-c" id="password-c" placeholder="••••••••" required>
                 </div>
             </fieldset>
             <button type="submit">Create account</button>
