Sign-up form : Add phone number validation

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="inputField">
                     <label for="phone">Phone number</label>
-                    <input type="tel" name="phone" id="phone" placeholder="9999999999" maxlength="10" required>
+                    <input type="tel" name="phone" id="phone" placeholder="9999999999" minlength="10" maxlength="10" pattern="^[0-9]+$" required>
                 </div>
             </fieldset>
             <fieldset>
