Sign-up form : Add validation message help

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -50,11 +50,13 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" placeholder="••••••••"
                            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" minlength="8" required>
+                    <p>At least 8 characters</p>
                 </div>
                 <div class="inputField">
                     <label for="password-c">Password confirmation</label>
                     <input type="password" name="password-c" id="password-c" placeholder="••••••••"
                            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" minlength="8" required>
+                    <p>At least 8 characters</p>
                 </div>
             </fieldset>
             <button type="submit">Create account</button>
