--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Sign-up form</title>
     <link rel="stylesheet" href="./style.css"/>
+    <script src="./script.js" defer></script>
 </head>
 <body>
 <main>
@@ -56,7 +57,7 @@
                     <label for="password-c">Password confirmation</label>
                     <input type="password" name="password-c" id="password-c" placeholder="••••••••"
                            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" minlength="8" required>
-                    <p>At least 8 characters</p>
+                    <p>Numbers, upper, lowercase</p>
                 </div>
             </fieldset>
             <button type="submit">Create account</button>
