Sign-up form : Edit style details

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -14,8 +14,8 @@
         <h1>Let's do this !</h1>
         <p>
             Illustration by
-            <a href="instagram.com/alzearafat/">Alzea Arafat</a> on
-            <a href="https://www.figma.com/community/file/890095002328610853">Figma</a>
+            <a href="https://www.instagram.com/alzearafat/" target="_blank">Alzea Arafat</a> on
+            <a href="https://www.figma.com/community/file/890095002328610853" target="_blank">Figma</a>
         </p>
     </div>
     <div class="form">
