Sign-up form : Add favicon

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -7,6 +7,7 @@
     <title>Sign-up form</title>
     <link rel="stylesheet" href="./style.css"/>
     <script src="./script.js" defer></script>
+    <link rel="shortcut icon" href="./img/icons8-application-form-32.png" type="image/x-icon">
 </head>
 <body>
 <main>
@@ -19,7 +20,7 @@
         </p>
     </div>
     <div class="form">
-        <img src="./Saly-1.svg" alt="Sign up illustration"/>
+        <img src="img/Saly-1.svg" alt="Sign up illustration"/>
         <h2>Sign-up</h2>
         <p>This is not a real online service ! You know you need something like this in your life to help you realize
             your deepest dreams.</p>
