Sign-up form : Make more accessible img alt

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -20,7 +20,7 @@
         </p>
     </div>
     <div class="form">
-        <img src="img/Saly-1.svg" alt="Sign up illustration"/>
+        <img src="img/Saly-1.svg" alt="Illustration of a person coding while flying on a rocket"/>
         <h2>Sign-up</h2>
         <p>This is not a real online service ! You know you need something like this in your life to help you realize
             your deepest dreams.</p>
