Sign-up form : Add post method to form for safety

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -24,7 +24,7 @@
         <h2>Let's do this !</h2>
         <p>This is not a real online service ! You know you need something like this in your life to help you realize
             your deepest dreams.</p>
-        <form action="">
+        <form action="" method="post">
             <fieldset>
                 <div class="inputField">
                     <label for="first-name">First name *</label>
