Sign-up form : Add input format indications

--- a/fullstack-javascript/sign-up-form/index.html
+++ b/fullstack-javascript/sign-up-form/index.html
@@ -30,20 +30,24 @@
                     <label for="first-name">First name *</label>
                     <input type="text" name="first-name" id="first-name" placeholder="Enter your first name"
                            maxlength="20" required>
+                    <p>Maximum 20 characters</p>
                 </div>
                 <div class="inputField">
                     <label for="last-name">Last name</label>
                     <input type="text" name="last-name" id="last-name" placeholder="Enter your name" maxlength="20">
+                    <p>Maximum 20 characters</p>
                 </div>
             </fieldset>
             <fieldset>
                 <div class="inputField">
                     <label for="email">Email *</label>
                     <input type="email" name="email" id="email" placeholder="Enter your email" required>
+                    <p>example@mail.com</p>
                 </div>
                 <div class="inputField">
                     <label for="phone">Phone number</label>
                     <input type="tel" name="phone" id="phone" placeholder="9999999999" minlength="10" maxlength="10" pattern="^[0-9]+$">
+                    <p>10 Digits number</p>
                 </div>
             </fieldset>
             <fieldset>
