Set up html structure

--- a/fullstack-javascript/admin-dashboard/index.html
+++ b/fullstack-javascript/admin-dashboard/index.html
@@ -132,7 +132,60 @@
       <div class="announcements">
         <h2>Announcements</h2>
         <div class="announcement-card">
-
+          <div>
+            <h4>Site Maintenance</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              porro repellendus minima! Vero, corporis impedit!
+            </p>
+          </div>
+          <div>
+            <h4>Community Share Day</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              porro repellendus minima! Vero, corporis impedit!
+            </p>
+          </div>
+          <div>
+            <h4>Update Privacy Policy</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              porro repellendus minima! Vero, corporis impedit!
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="trending">
+        <h2>Trending</h2>
+        <div class="trending-card">
+          <div>
+            <img src="" alt="" />
+            <div>
+              <p>@tegan</p>
+              <p>World Peace Builder</p>
+            </div>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <div>
+              <p>@morgan</p>
+              <p>Super Cool Project</p>
+            </div>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <div>
+              <p>@kendall</p>
+              <p>Life Changing App</p>
+            </div>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <div>
+              <p>@alex</p>
+              <p>No traffic Maker</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
