--- a/fullstack-javascript/admin-dashboard/index.html
+++ b/fullstack-javascript/admin-dashboard/index.html
@@ -16,7 +16,7 @@
         <p>Troy McClure</p>
       </div>
       <div class="profile-info">
-        <img src="" alt="" />
+        <img src="./img/avatars/Hansel.png" alt="Troy's avatar" />
         <p>Hi there,</p>
         <p>Troy McClure (@troy)</p>
       </div>
@@ -159,30 +159,30 @@
         <h2>Trending</h2>
         <div class="trending-card">
           <div>
-            <img src="" alt="" />
+            <img src="./img/avatars/Betty.png" alt="Betty's avatar" />
             <div>
-              <p>@tegan</p>
+              <p>@betty</p>
               <p>World Peace Builder</p>
             </div>
           </div>
           <div>
-            <img src="" alt="" />
+            <img src="./img/avatars/Hansel.png" alt="Troy's avatar" />
             <div>
-              <p>@morgan</p>
+              <p>@troy</p>
               <p>Super Cool Project</p>
             </div>
           </div>
           <div>
-            <img src="" alt="" />
+            <img src="./img/avatars/Janet.png" alt="Janet's avatar" />
             <div>
-              <p>@kendall</p>
+              <p>@janet</p>
               <p>Life Changing App</p>
             </div>
           </div>
           <div>
-            <img src="" alt="" />
+            <img src="./img/avatars/Mark.png" alt="Mark's avatar" />
             <div>
-              <p>@alex</p>
+              <p>@mark</p>
               <p>No traffic Maker</p>
             </div>
           </div>
